# sheets-integration

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py
app/models/: __init__.py  sheet_models.py
app/routes/: __init__.py  sheets_routes.py
app/service/: sheets_service.py
app/services/: __init__.py  sheets_service.py
tests/: conftest.py  test_main.py  test_models.py  test_routes.py
